--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="assets/eg.png">
   <link rel="icon" href="images/EG-removebg-preview.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="/path/to/cdn/bootstrap.min.css" />
+
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
@@ -26,7 +28,9 @@
 
 <body class="mat-typography">
   <app-root></app-root>
+  <script src="/path/to/cdn/bootstrap.bundle.min.js"></script>
 
+  <script src="/path/to/cdn/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
